permit illegal access for jdk16